News on mobile fix

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -59,6 +59,7 @@
     div#news {
         margin: 0;
         width: 100%;
+        padding: 10px;
     }
 
     .headBox button {
